Damn I wrote a lot and cant remeber what it was. tied asf

--- a/help.me/app/src/main/res/values/strings.xml
+++ b/help.me/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@ Scarring is a potential complication of any wound. Prompt first aid and the prev
     Listen to your portable radio for important updates and instructions from local authorities. Remember to have a battery-powered radio in your survival kit. Some radios are now equipped with multiple power sources, such as batteries, solar panels and a hand crank\n
     If power is lost, use a generator with caution. Make sure conditions are safe before operating a portable generator. Only operate it outside — away from windows, doors or vents. Follow all manufacturer’s instructions.\n
     Stay in your safe area and do not drive until the danger has passed. Resist the temptation to check on your property until you are sure it is safe to do so.</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
